# walletka-node

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: publish-docker.yml
protos/: node.proto
src/: main.rs
src/api/: mod.rs  node_api.rs
src/processor/: mod.rs  node_events.rs  node_processor.rs
