[package]
name = "walletka-sample-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.75"
tonic = "0.10.2"
prost = "0.12.3"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }

# Lightning

ldk-node = { git = "https://github.com/Walletka/ldk-node" }
# ldk-node = "0.2.0"
tonic-web = "0.10.2"
dotenv = "0.15.0"
tokio-stream = "0.1.14"
uuid = { version = "1.6.1", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
os-rng = "0.0.0"
log = "0.4.20"
amqprs = "1.5.2"

[build-dependencies]
tonic-build = "0.10.2"
